k8s/clusters/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
spec:
  type: ClusterIP
  selector:
    app: echo
  ports:
    - name: http
      port: 8642
      targetPort: 8642
    - name: dashboard
      port: 9119
      targetPort: 9119
